--- a/public/index.html
+++ b/public/index.html
@@ -10,34 +10,21 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+     <!-- Fuentes Google  -->
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link
+         href="https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles&display=swap&family=Darker+Grotesque:wght@300&display=swap&family=Cormorant:wght@300&family=Indie+Flower&display=swap&family=Marck+Script&display=swap&family=Megrim&display=swap&family=Monoton&display=swap&family=Montserrat+Alternates:wght@100&display=swap&family=Nixie+One&display=swap&family=Noto+Sans+Wancho&display=swap&family=Nunito:wght@200&display=swap&family=Questrial&display=swap&family=Rock+Salt&display=swap&family=Sacramento&display=swap&family=Silkscreen&display=swap&family=Urbanist:wght@100&display=swap"
+         rel="stylesheet">    
+     <!--Fin Fuentes Google  -->
+  
     <title>React App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <noscript style="height: 80px; background:yellow ;">You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>    
   </body>
 </html>
